# aiohttp-openapi

./: .coveragerc  .gitignore  .travis.yml  LICENSE  pyproject.toml  readme.rst  tox.ini
src/aiohttp_openapi/: __init__.py  openapi.py
