[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "aiohttp_openapi"
version = "0.1.0"
description = "OpenAPI Specification generator for aiohttp-based microservices"
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
license = "MIT"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: AsyncIO",
]
packages = [
    { include = "aiohttp_openapi", from = "src" },
]

[tool.poetry.dependencies]
aiohttp = "^3.6.0"
apispec = {extras = ["validation"], version = "^3.3.0"}
attrs = "^19.3.0"
marshmallow = "^3.6.0"
python = "^3.7"
ujson = "^1.35"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "*"
faker = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins-unleashed = "*"
flake8-comprehensions = "*"
flake8-import-order = "*"
flake8-print = "*"
flake8-pytest = "*"
mypy = "*"
pytest = "*"
pytest-aiohttp = "*"
rope = "*"
